// user.proto - 用户服务 gRPC 接口定义
// 
// 该文件定义了用户管理相关的 gRPC 服务接口，与 interfaces.go 中的
// UserService 接口保持对应关系。
//
// 对应接口：
//   - UserService.GetUser -> UserService.GetUser
//   - UserService.CreateUser -> UserService.CreateUser
//   - UserService.UpdateUser -> UserService.UpdateUser
//   - UserService.DeleteUser -> UserService.DeleteUser
//   - UserService.RecordBehavior -> UserService.RecordBehavior
//   - UserService.GetUserBehaviors -> UserService.GetUserBehaviors
//   - UserService.GetUserProfile -> UserService.GetUserProfile

syntax = "proto3";

package user.v1;

option go_package = "recommend-system/proto/user/v1;userv1";

import "google/protobuf/timestamp.proto";

// =============================================================================
// 用户服务定义
// =============================================================================

// UserService 用户服务
// 提供用户管理、行为记录和画像查询等功能
service UserService {
    // GetUser 获取用户信息
    // 对应 interfaces.UserService.GetUser
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    
    // CreateUser 创建用户
    // 对应 interfaces.UserService.CreateUser
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    
    // UpdateUser 更新用户信息
    // 对应 interfaces.UserService.UpdateUser
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    
    // DeleteUser 删除用户
    // 对应 interfaces.UserService.DeleteUser
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    
    // BatchGetUsers 批量获取用户
    // 对应 interfaces.UserRepository.GetByIDs
    rpc BatchGetUsers(BatchGetUsersRequest) returns (BatchGetUsersResponse);
    
    // RecordBehavior 记录用户行为
    // 对应 interfaces.UserService.RecordBehavior
    rpc RecordBehavior(RecordBehaviorRequest) returns (RecordBehaviorResponse);
    
    // GetUserBehaviors 获取用户行为历史
    // 对应 interfaces.UserService.GetUserBehaviors
    rpc GetUserBehaviors(GetUserBehaviorsRequest) returns (GetUserBehaviorsResponse);
    
    // GetUserProfile 获取用户画像
    // 对应 interfaces.UserService.GetUserProfile
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
    
    // StreamUserBehaviors 流式获取用户行为（实时行为流）
    rpc StreamUserBehaviors(StreamUserBehaviorsRequest) returns (stream UserBehaviorEvent);
}

// =============================================================================
// 用户相关消息定义
// =============================================================================

// User 用户信息
// 对应 interfaces.User
message User {
    // id 用户ID
    string id = 1;
    
    // name 用户名称
    string name = 2;
    
    // email 用户邮箱
    string email = 3;
    
    // age 用户年龄
    int32 age = 4;
    
    // gender 用户性别: male, female, other
    string gender = 5;
    
    // metadata 用户元数据
    map<string, string> metadata = 6;
    
    // created_at 创建时间
    google.protobuf.Timestamp created_at = 7;
    
    // updated_at 更新时间
    google.protobuf.Timestamp updated_at = 8;
}

// UserBehavior 用户行为
// 对应 interfaces.UserBehavior
message UserBehavior {
    // user_id 用户ID
    string user_id = 1;
    
    // item_id 物品ID
    string item_id = 2;
    
    // action 行为类型: view, click, like, dislike, buy, share, skip
    string action = 3;
    
    // timestamp 行为时间戳
    google.protobuf.Timestamp timestamp = 4;
    
    // context 行为上下文
    map<string, string> context = 5;
    
    // duration_ms 停留时长（毫秒）
    int64 duration_ms = 6;
}

// UserProfile 用户画像
// 对应 interfaces.UserProfile
message UserProfile {
    // user 用户基本信息
    User user = 1;
    
    // total_actions 总行为数
    int32 total_actions = 2;
    
    // preferred_categories 偏好类目及得分
    repeated CategoryScore preferred_categories = 3;
    
    // active_hours 活跃时段（0-23小时，值为活跃次数）
    repeated int32 active_hours = 4;
    
    // last_active 最后活跃时间
    google.protobuf.Timestamp last_active = 5;
    
    // behavior_summary 行为统计摘要
    BehaviorSummary behavior_summary = 6;
    
    // interest_tags 兴趣标签
    repeated string interest_tags = 7;
}

// CategoryScore 类目得分
message CategoryScore {
    // category 类目名称
    string category = 1;
    
    // score 得分
    float score = 2;
    
    // count 交互次数
    int32 count = 3;
}

// BehaviorSummary 行为统计摘要
message BehaviorSummary {
    // view_count 浏览次数
    int64 view_count = 1;
    
    // click_count 点击次数
    int64 click_count = 2;
    
    // like_count 点赞次数
    int64 like_count = 3;
    
    // buy_count 购买次数
    int64 buy_count = 4;
    
    // share_count 分享次数
    int64 share_count = 5;
    
    // avg_duration_ms 平均停留时长（毫秒）
    int64 avg_duration_ms = 6;
}

// =============================================================================
// 请求/响应消息定义
// =============================================================================

// GetUserRequest 获取用户请求
message GetUserRequest {
    // user_id 用户ID
    string user_id = 1;
}

// GetUserResponse 获取用户响应
message GetUserResponse {
    // user 用户信息
    User user = 1;
}

// CreateUserRequest 创建用户请求
// 对应 interfaces.CreateUserRequest
message CreateUserRequest {
    // name 用户名称（必填）
    string name = 1;
    
    // email 用户邮箱（必填）
    string email = 2;
    
    // age 用户年龄
    int32 age = 3;
    
    // gender 用户性别
    string gender = 4;
    
    // metadata 用户元数据
    map<string, string> metadata = 5;
}

// CreateUserResponse 创建用户响应
message CreateUserResponse {
    // user 创建的用户信息
    User user = 1;
}

// UpdateUserRequest 更新用户请求
// 对应 interfaces.UpdateUserRequest
message UpdateUserRequest {
    // user_id 用户ID（必填）
    string user_id = 1;
    
    // name 用户名称
    string name = 2;
    
    // email 用户邮箱
    string email = 3;
    
    // age 用户年龄
    int32 age = 4;
    
    // gender 用户性别
    string gender = 5;
    
    // metadata 用户元数据
    map<string, string> metadata = 6;
    
    // update_mask 更新字段掩码
    repeated string update_mask = 7;
}

// UpdateUserResponse 更新用户响应
message UpdateUserResponse {
    // user 更新后的用户信息
    User user = 1;
}

// DeleteUserRequest 删除用户请求
message DeleteUserRequest {
    // user_id 用户ID
    string user_id = 1;
}

// DeleteUserResponse 删除用户响应
message DeleteUserResponse {
    // success 是否成功
    bool success = 1;
    
    // message 响应消息
    string message = 2;
}

// BatchGetUsersRequest 批量获取用户请求
message BatchGetUsersRequest {
    // user_ids 用户ID列表
    repeated string user_ids = 1;
}

// BatchGetUsersResponse 批量获取用户响应
message BatchGetUsersResponse {
    // users 用户信息列表
    repeated User users = 1;
    
    // not_found_ids 未找到的用户ID列表
    repeated string not_found_ids = 2;
}

// RecordBehaviorRequest 记录行为请求
// 对应 interfaces.RecordBehaviorRequest
message RecordBehaviorRequest {
    // user_id 用户ID（必填）
    string user_id = 1;
    
    // item_id 物品ID（必填）
    string item_id = 2;
    
    // action 行为类型（必填）
    string action = 3;
    
    // context 行为上下文
    map<string, string> context = 4;
    
    // timestamp 行为时间戳，不填则使用服务器时间
    google.protobuf.Timestamp timestamp = 5;
    
    // duration_ms 停留时长（毫秒）
    int64 duration_ms = 6;
    
    // request_id 关联的推荐请求ID
    string request_id = 7;
}

// RecordBehaviorResponse 记录行为响应
message RecordBehaviorResponse {
    // success 是否成功
    bool success = 1;
    
    // behavior_id 行为记录ID
    string behavior_id = 2;
}

// GetUserBehaviorsRequest 获取用户行为请求
message GetUserBehaviorsRequest {
    // user_id 用户ID
    string user_id = 1;
    
    // limit 返回数量限制
    int32 limit = 2;
    
    // offset 偏移量
    int32 offset = 3;
    
    // action_filter 行为类型过滤
    repeated string action_filter = 4;
    
    // start_time 开始时间过滤
    google.protobuf.Timestamp start_time = 5;
    
    // end_time 结束时间过滤
    google.protobuf.Timestamp end_time = 6;
}

// GetUserBehaviorsResponse 获取用户行为响应
message GetUserBehaviorsResponse {
    // behaviors 行为列表
    repeated UserBehavior behaviors = 1;
    
    // total 总数
    int64 total = 2;
    
    // has_more 是否有更多
    bool has_more = 3;
}

// GetUserProfileRequest 获取用户画像请求
message GetUserProfileRequest {
    // user_id 用户ID
    string user_id = 1;
    
    // include_behaviors 是否包含最近行为
    bool include_behaviors = 2;
    
    // behaviors_limit 行为数量限制
    int32 behaviors_limit = 3;
}

// GetUserProfileResponse 获取用户画像响应
message GetUserProfileResponse {
    // profile 用户画像
    UserProfile profile = 1;
    
    // recent_behaviors 最近行为（如果请求）
    repeated UserBehavior recent_behaviors = 2;
}

// StreamUserBehaviorsRequest 流式获取用户行为请求
message StreamUserBehaviorsRequest {
    // user_id 用户ID
    string user_id = 1;
    
    // action_filter 行为类型过滤
    repeated string action_filter = 2;
}

// UserBehaviorEvent 用户行为事件
message UserBehaviorEvent {
    // event_type 事件类型
    oneof event {
        // behavior 用户行为
        UserBehavior behavior = 1;
        
        // heartbeat 心跳
        string heartbeat = 2;
    }
    
    // sequence_number 事件序列号
    int64 sequence_number = 3;
}

